[package]
name = "rust_mqtt_playground"
version = "0.1.0"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-async-client = "0.1.5"
env_logger = "0.7.1"
tokio = { version = "0.2.22", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
mqtt-protocol = "0.8.1"
